--- a/static/.vim/UltiSnips/README
+++ b/static/.vim/UltiSnips/README
@@ -1,17 +1,4 @@
 This directory contains the snippets for UltiSnips.
 https://github.com/sirver/ultisnips
-
-Standing On The Shoulders of Giants
-===================================
-
-The snippets have been collected from various other project which I want to
-express my gratitude for. My main source for inspiration where the following
-two projects:
-
-   TextMate: http://svn.textmate.org/trunk/Bundles/
-   SnipMate: http://code.google.com/p/snipmate/
-
-UltiSnips has seen contributions by many individuals. Those contributions have
-been merged into this collection seamlessly and without further comments.
-
--- vim:ft=rst:nospell:
+Most of these snippets are from the above repo, I just cloned them so that I
+could make modifications and keep them in my dotfiles.
